Added notebooks, authorships, and more README

--- a/notebooks/Taller1-Introduccion_AA.ipynb
+++ b/notebooks/Taller1-Introduccion_AA.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Taller 1 - Python en la práctica\n",
     "\n",
-    "**Autores:** [Ivan Meresman](https://ivanlmh.github.io/), [Daniel Herrera-Esposito](https://dherrera1911.github.io/)\n",
+    "### Autores: [Ivan Meresman](https://ivanlmh.github.io/), [Daniel Herrera-Esposito](https://dherrera1911.github.io/)\n",
     "\n",
     "En la clase 1 de AABC se introdujeron conceptos básicos de Python y del aprendizaje automático. Luego, se introdujo el set de datos **Iris** para armar su primer clasificador.\n",
     "\n",
