--- a/notebooks/Taller2-Aprendizaje_supervisado.ipynb
+++ b/notebooks/Taller2-Aprendizaje_supervisado.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "# Taller 2 - Aprendizaje Supervisado\n",
     "\n",
+    "### Autores: [Ivan Meresman](https://ivanlmh.github.io/), [Daniel Herrera-Esposito](https://dherrera1911.github.io/)\n",
+    "\n",
     "La segunda clase del curso fue una introducción al que puede ser el tipo mas popular de Aprendizaje Automatico, el Aprendizaje Supervisado. Los modelos de este tipo son utilizados para variadas tareas en diversas áreas.\n",
     "\n",
     "En este taller vamos a explorar dos algoritmos simples, como lo son la regresión lineal y los arboles de decision. Aunque simples, estos  modelos pueden dar muy buenos resultados, e introducen conceptos importantes del Aprendizaje Automático que veremos a lo largo del curso.\n",
