--- a/notebooks/Taller2-Aprendizaje_supervisado.ipynb
+++ b/notebooks/Taller2-Aprendizaje_supervisado.ipynb
@@ -342,16 +342,16 @@
     "# al final donde se muestra la regularización. Note que debe elegir el valor\n",
     "# del parámetro de regularización.\n",
     "#\n",
-    "modeloRidge = Ridge(alpha=0.5) ### LLENAR: Defina el modelo Ridge\n",
+    "modeloRidge =  ### LLENAR: Defina el modelo Ridge\n",
     "#\n",
     "# Luego ajuste el modelo definido a los datos de todas las columnas\n",
-    "modeloRidge.fit(Xtrain, ytrain) ### LLENAR: llene el paréntesis con lo necesario para entrenar el modelo\n",
+    "modeloRidge.fit() ### LLENAR: llene el paréntesis con lo necesario para entrenar el modelo\n",
     "#\n",
     "# Ahora haga lo mismo pero para un modelo tipo Lasso\n",
     "### LLENAR: Defina el modelo Lasso\n",
-    "modeloLasso = Lasso(alpha=0.1)\n",
+    "modeloLasso = \n",
     "#\n",
-    "modeloLasso.fit(Xtrain, ytrain) ### LLENAR: llene el paréntesis con lo necesario para entrenar el modelo\n"
+    "modeloLasso.fit() ### LLENAR: llene el paréntesis con lo necesario para entrenar el modelo\n"
    ]
   },
   {
@@ -363,27 +363,27 @@
    "outputs": [],
    "source": [
     "#### Uncomment for students\n",
-    "#\n",
+    "\n",
     "# Luego evaluamos el rendimiento de los modelos\n",
-    "#\n",
+    "\n",
     "# Evaluación Ridge:\n",
-    "#ytrain_predict_ridge = ### LLENAR: Llene para obtener las predicciones del modelo ridge para el set de ENTRENAMIENTO\n",
-    "#r2_train_ridge = r2_score(ytrain, ytrain_predict_ridge)\n",
+    "ytrain_predict_ridge = ### LLENAR: Llene para obtener las predicciones del modelo ridge para el set de ENTRENAMIENTO\n",
+    "r2_train_ridge = r2_score(ytrain, ytrain_predict_ridge)\n",
     "# evaluacion del modelo sobre los datos de testeo\n",
-    "#ytest_predict_ridge = ### LLENAR: Llene para obtener las predicciones del modelo ridge para el set de TESTEO\n",
-    "#r2_test_ridge = r2_score(ytest, ytest_predict_ridge)\n",
-    "#\n",
+    "ytest_predict_ridge = ### LLENAR: Llene para obtener las predicciones del modelo ridge para el set de TESTEO\n",
+    "r2_test_ridge = r2_score(ytest, ytest_predict_ridge)\n",
+    "\n",
     "# Evaluación LASSO\n",
-    "#ytrain_predict_lasso = ### LLENAR: Llene para obtener las predicciones del modelo lasso para el set de ENTRENAMIENTO\n",
-    "#r2_train_lasso = r2_score(ytrain, ytrain_predict_lasso)\n",
+    "ytrain_predict_lasso = ### LLENAR: Llene para obtener las predicciones del modelo lasso para el set de ENTRENAMIENTO\n",
+    "r2_train_lasso = r2_score(ytrain, ytrain_predict_lasso)\n",
     "# evaluacion del modelo sobre los datos de testeo\n",
-    "#ytest_predict_lasso = ### LLENAR: Llene para obtener las predicciones del modelo lasso para el set de TESTEO\n",
-    "#r2_test_lasso = r2_score(ytest, ytest_predict_lasso)\n",
+    "ytest_predict_lasso = ### LLENAR: Llene para obtener las predicciones del modelo lasso para el set de TESTEO\n",
+    "r2_test_lasso = r2_score(ytest, ytest_predict_lasso)\n",
     "\n",
     "# Finalmente, imprimimos el rendimiento de los modelos\n",
     "#\n",
-    "#print( f\"El R2 del modelo Ridge en training set es de {r2_train_ridge:5.3f}, y en el test set es de {r2_test_ridge:6.3f}\" )\n",
-    "#print( f\"El R2 del modelo LASSO en training set es de {r2_train_lasso:5.3f}, y en el test set es de {r2_test_lasso:6.3f}\")"
+    "print( f\"El R2 del modelo Ridge en training set es de {r2_train_ridge:5.3f}, y en el test set es de {r2_test_ridge:6.3f}\" )\n",
+    "print( f\"El R2 del modelo LASSO en training set es de {r2_train_lasso:5.3f}, y en el test set es de {r2_test_lasso:6.3f}\")"
    ]
   },
   {
@@ -466,36 +466,36 @@
    },
    "outputs": [],
    "source": [
-    "#coefs_regresionLineal = ### RELLENE PARA EXTRAER LOS COEFICIENTES DE LA REGRESION SIN PENALIZACION\n",
-    "#coefs_regresionRidge = ### RELLENE PARA EXTRAER LOS COEFICIENTES DE LA REGRESION CON PENALIZACION RIDGE\n",
-    "#coefs_regresionLasso = ### RELLENE PARA EXTRAER LOS COEFICIENTES DE LA REGRESION CON PENALIZACION LASSO\n",
-    "#\n",
+    "coefs_regresionLineal = ### RELLENE PARA EXTRAER LOS COEFICIENTES DE LA REGRESION SIN PENALIZACION\n",
+    "coefs_regresionRidge = ### RELLENE PARA EXTRAER LOS COEFICIENTES DE LA REGRESION CON PENALIZACION RIDGE\n",
+    "coefs_regresionLasso = ### RELLENE PARA EXTRAER LOS COEFICIENTES DE LA REGRESION CON PENALIZACION LASSO\n",
+    "\n",
     "## Extraemos los nombres de las variables para identificarlas\n",
-    "#nombresVariables = boston_dataset.feature_names\n",
+    "nombresVariables = boston_dataset.feature_names\n",
     "#\n",
     "## Graficamos los coeficientes de la regresion sin penalizacion\n",
-    "#plt.figure(figsize=(8,10))\n",
-    "#plt.subplot(3,1,1)\n",
-    "#plt.plot(coefs_regresionLineal.T,'o')\n",
-    "#plt.title('Regresion lineal sin penalizacion')\n",
-    "#plt.grid(True)\n",
-    "#axis = plt.xticks(ticks=np.arange(13), labels=nombresVariables)\n",
-    "#\n",
+    "plt.figure(figsize=(8,10))\n",
+    "plt.subplot(3,1,1)\n",
+    "plt.plot(coefs_regresionLineal.T,'o')\n",
+    "plt.title('Regresion lineal sin penalizacion')\n",
+    "plt.grid(True)\n",
+    "axis = plt.xticks(ticks=np.arange(13), labels=nombresVariables)\n",
+    "\n",
     "## Graficamos los coeficientes de la regresion con penalizacion RIDGE\n",
-    "#plt.subplot(3,1,2)\n",
-    "#grafico = plt.plot(coefs_regresionRidge.T,'o')\n",
-    "#plt.title('Regresion lineal con penalizacion Ridge')\n",
-    "#plt.grid(True)\n",
-    "#axis = plt.xticks(ticks=np.arange(13), labels=nombresVariables)\n",
-    "#\n",
+    "plt.subplot(3,1,2)\n",
+    "grafico = plt.plot(coefs_regresionRidge.T,'o')\n",
+    "plt.title('Regresion lineal con penalizacion Ridge')\n",
+    "plt.grid(True)\n",
+    "axis = plt.xticks(ticks=np.arange(13), labels=nombresVariables)\n",
+    "\n",
     "## Graficamos los coeficientes de la regresion con penalizacion\n",
-    "#plt.subplot(3,1,3)\n",
-    "#inactivos = np.flatnonzero(coefs_regresionLasso == 0)\n",
-    "#grafico = plt.plot(coefs_regresionLasso.T,'o')\n",
-    "#plt.plot(inactivos,np.zeros(len(inactivos)),'o',color='gray')\n",
-    "#plt.title('Regresion lineal con penalizacion Lasso')\n",
-    "#plt.grid(True)\n",
-    "#axis = plt.xticks(ticks=np.arange(13), labels=nombresVariables)"
+    "plt.subplot(3,1,3)\n",
+    "inactivos = np.flatnonzero(coefs_regresionLasso == 0)\n",
+    "grafico = plt.plot(coefs_regresionLasso.T,'o')\n",
+    "plt.plot(inactivos,np.zeros(len(inactivos)),'o',color='gray')\n",
+    "plt.title('Regresion lineal con penalizacion Lasso')\n",
+    "plt.grid(True)\n",
+    "axis = plt.xticks(ticks=np.arange(13), labels=nombresVariables)"
    ]
   },
   {
