--- a/notebooks/Taller3-Aprendizaje_no_supervisado.ipynb
+++ b/notebooks/Taller3-Aprendizaje_no_supervisado.ipynb
@@ -498,8 +498,8 @@
     "Xpuntaje.columns = Xpuntaje_crudo.columns # le ponemos nombre a las columnas del nuevo dataframe\n",
     "\n",
     "# Luego extraemos los componentes principales del set de datos\n",
-    "pca_puntaje = PCA() # LLENAR CODIGO para definir modelo de pca\n",
-    "pca_puntaje.fit(Xpuntaje) # LLENAR CODIGO para ajustar el modelos  alos datos estandarizados"
+    "pca_puntaje =  # LLENAR CODIGO para definir modelo de pca\n",
+    "pca_puntaje.fit() # LLENAR CODIGO para ajustar el modelos  alos datos estandarizados"
    ]
   },
   {
@@ -619,9 +619,7 @@
     "# Introduzca el código abajo para graficar la varianza que explica cada componente principal\n",
     "# Puede usar la función plt.plot (vea la documentación en https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html)\n",
     "# Imprima también el vector 'varianzaExplicada' para ver cuantos componentes se requieren para explicar el 80% de la varianza. Puede\n",
-    "# usar la función para hacer la suma cumulativa: varianzaExplicada.cumsum()\n",
-    "plt.plot(varianzaExplicada)\n",
-    "print(varianzaExplicada.cumsum())"
+    "# usar la función para hacer la suma cumulativa: varianzaExplicada.cumsum()\n"
    ]
   },
   {
