--- a/notebooks/Taller4-Representacion_y_modelado.ipynb
+++ b/notebooks/Taller4-Representacion_y_modelado.ipynb
@@ -841,18 +841,18 @@
     "\n",
     "# Ajustamos y testeamos el modelo con la representacion manual\n",
     "ridgeManual = RidgeClassifier(alpha=alpha)\n",
-    "ridgeManual.fit(Xtrain_man, ytrain_man)                 # PARA RELLENAR\n",
-    "scoreManual = ridgeManual.score(Xtest_man, ytest_man) # PARA RELLENAR\n",
+    "ridgeManual.fit()                 # PARA RELLENAR\n",
+    "scoreManual = ridgeManual.score() # PARA RELLENAR\n",
     "\n",
     "# Ajustamos y testeamos el modelo con la representacion generica\n",
     "ridgeGenerica = RidgeClassifier(alpha=alpha)\n",
-    "ridgeGenerica.fit(Xtrain_gen, ytrain_gen)                   # PARA RELLENAR\n",
-    "scoreGenerica = ridgeGenerica.score(Xtest_gen, ytest_gen) # PARA RELLENAR\n",
+    "ridgeGenerica.fit()                   # PARA RELLENAR\n",
+    "scoreGenerica = ridgeGenerica.score() # PARA RELLENAR\n",
     "\n",
     "# Ajustamos y testeamos el modelo con la representacion lineal\n",
     "ridgeLineal = RidgeClassifier(alpha=alpha)\n",
-    "ridgeLineal.fit(Xtrain_lin, ytrain_lin)                 # PARA RELLENAR\n",
-    "scoreLineal = ridgeLineal.score(Xtest_lin, ytest_lin) # PARA RELLENAR\n",
+    "ridgeLineal.fit()                 # PARA RELLENAR\n",
+    "scoreLineal = ridgeLineal.score() # PARA RELLENAR\n",
     "print(f\"Rendimientos: representacion manual ({scoreManual*100:.1f}%), representacion generica ({scoreGenerica*100:.1f}%), representacion lineal ({scoreLineal*100:.1f}%)\")\n"
    ]
   },
@@ -919,8 +919,8 @@
     "# el mismo seed para el train-test split para cada caso, asique sólo hay que pegar las columnas\n",
     "\n",
     "# RELLENE: Ponga los datos que quiere concatenar en las listas de abajo\n",
-    "lista_entrenamiento_concatenar = [Xtrain_gen, Xtrain_lin]# Rellene\n",
-    "lista_testeo_concatenar = [Xtest_gen, Xtest_lin] # Rellene\n",
+    "lista_entrenamiento_concatenar = []# Rellene\n",
+    "lista_testeo_concatenar = [] # Rellene\n",
     "\n",
     "Xtrain_cat = pd.concat(lista_entrenamiento_concatenar, axis=1, join='inner', ignore_index=True)\n",
     "Xtest_cat = pd.concat(lista_testeo_concatenar, axis=1, join='inner', ignore_index=True)\n",
